styles/main.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  width: 100vw;
}

a {
  text-decoration: none;
}

header {
  position: fixed;
  top: 0px;
  width: 100%;
  height: 50px;
  color: #fff;
  background-color: #000000;
  animation: header-down 1s;
  z-index: 3;
  display: flex;
  justify-content: space-around;
  align-items: center;
  box-shadow: 9px 12px 23px 0px #D3D3D3;
}

header p {
  display: inline;
}

header a, header p {
  color: #fff;
  margin: 0 10px;
  cursor: pointer;
}

header a:hover, header p:hover {
  transition: font-size 1s;
  font-size: 18px;
  color: gray;
}

header a:not(:hover), header p:not(:hover) {
  transition: font-size 1s;
  font-size: 16px;
}

header h1 {
  font-size: 40px;
}

.main-container {
  max-height: 200vh;
  overflow: scroll;
  position: relative;
}

.main-container::before {
  content: '';
  background-color: lightgreen;
  background-image: url('../images/bcharre.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  max-height: 100vh;
  position: fixed;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: .3;
  z-index: -2;
}

/* UNCOMMENT BELOW CODE IF ENABLING EMAIL FORM */
.form-container {
  display: none;
  /* position: fixed;
  z-index: 3;
  left: 50%;
  margin-left: -300px;
  top: 60px;
  height: 400px;
  width: 600px;
  border-radius: 2%;
  box-shadow: 9px 12px 23px 0px #D3D3D3;
  background-color: #E9FBEA; */
}

/* .email-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
} */

.bio-container {
  position: relative;
  min-height: 400px;
  display: flex;
  max-width: 1000px;
  margin: 60px auto 10px;
  border-radius: 2%;
  justify-content: space-evenly;
  align-items: center;
  padding: 10px;
  /* box-shadow: 9px 12px 23px 0px #D3D3D3; */
}

/* .bio-container::before {
  content: '';
  font-size: 180px;
  color: green;
  background-color: gray;
  border-radius: 2%;
  line-height: 3.5em;
  min-height: 400px;
  text-align: center;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: .3;
  z-index: -2;
} */

.bio-content {
  width: 45%;
  line-height: 1.2rem;
  text-align: center;
}

.bio-img-contain {
  max-width: 60%;
  height: 300px;
}

.bio-img {
  height: 100%;
  border-radius: 10%;
  box-shadow: 9px 12px 23px 0px #D3D3D3;
}


.skills-container {
  position: relative;
  height: 140px;
  border-radius: 2%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 10px auto;
  max-width: 1000px;
  /* box-shadow: 9px 12px 23px 0px #D3D3D3; */
  overflow: hidden;
}

/* .skills-container::before {
  content: '';
  position: absolute;
  border-radius: 2%;
  background-color: gray;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: .2;
  z-index: -3;
} */

.get-skills {
  display: flex;
  justify-content: center;
  font-family: 'Inconsolata', monospace;
  font-size: 20px;
  font-weight: 700;
  color: #0000FF;
}

.skill-link {
  color: #008000;
}

.response-contain {
  display: none;
  justify-content: space-around;
  width: 90%;
}

.skills-list {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
}

i {
  color: black;
  transition: font-size 1s;
  font-size: 30px;
  border-radius: 15%;
  box-shadow: 9px 12px 23px 0px #D3D3D3;
}


.project-container {
  position: relative;
  min-height: 450px;
  max-width: 1000px;
  border-radius: 2%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 10px auto 30px;
  padding: 10px;
  /* box-shadow: 9px 12px 23px 0px #D3D3D3; */
}

/* .project-container::before {
  content: '';
  position: absolute;
  font-size: 180px;
  color: darkgreen;
  background-color: gray;
  line-height: 2.4em;
  min-height: 400px;
  text-align: center;
  min-height: 450px;
  max-width: 1000px;
  border-radius: 2%;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: .2;
  z-index: -3;
} */

.project {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  max-width: 75vw;
  
}

.project-container h2 {
  margin: 0 auto;
}

.project-content {
  width: 40%;
  text-align: center;
  padding: 10px;
}

.project-img-contain {
  width: 400px;
  height: 300px;
  text-align: center;
}

.project-img {
  height: 100%;
  width: 100%;
  border-radius: 10%;
  box-shadow: 9px 12px 23px 0px #D3D3D3;
}

.proj-links {
  display: flex;
  justify-content: space-evenly;
}

.proj-link {
  width: 25%;
  color: #000;
  border: 1px solid #000;
  border-radius: 10%;
}

.proj-link:hover {
  background-color: #000;
  color: #FFF;
}

.project-2, .project-3, .project-4 {
  display: none;
}

.lni {
  font-size: 40px;
  box-shadow: none;
}

.lni:hover {
  cursor: pointer;
  font-weight: 700;
}

.btn-group {
  display: flex;
  margin: 5px auto;
  width: 20%;
  justify-content: space-evenly;
}

.skills-in {
  animation: skills-in 3s ease-out;
}

.skills-out {
  transition: font-size 2s;
  font-size: 30px;
}

.skills-hi {
  transition: font-size 1s;
  font-size: 60px;
  box-shadow: 9px 12px 23px 0px #282828;
}

footer {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 0px;
  height: 20px;
  width: 100%;
  background-color: #000;
  color: #FFF;
}

footer p {
  color: gray;
  font-size: 10px;
}

/* Animations */
@keyframes header-down {
  0% {
    height: 0px;
  }

  100% {
    height: 50px;
  }
}

@keyframes skills-in {
  0% {
    margin-left: 220%;
  }

  50% {
    margin-left: 200%;
  }

  100% {
    margin-left: 0%;
  }
}

@media only screen and (min-width: 769px) and (max-width: 980px) {

  .project-container::before {
    font-size: 100px;
    line-height: 4em;
  }
}

@media only screen and (max-width: 768px) {

  header {
    display: block;
    line-height: 1.5em;
    text-align: center;
    animation: none;
    height: 100px;
  }

  .bio-container {
    margin-top: 100px;
  }

  .bio-container::before, .skills-container::before, .project-container::before {
    line-height: 1.2em;
    font-size: 30px;
    text-align: left;
  }

  .bio-img-contain, .project-img-contain {
    display: none;
  }

  .bio-content, .project-content {
    width: 90%;
  }

  .get-skills {
    display: none;
  }

  .response-contain {
    display: flex;
  }

  .response {
    display: none;
  }

  .skills-list {
    width: 70%;
    flex-wrap: wrap;
  }

  i, .skills-hi {
    transition: font-size 1s;
    font-size: 30px;
    margin: 5px;
  }
}

